crates/fec-cli/src/commands/snapshots/libfec__commands__landing__tests__wide_terminal.snap
---
source: crates/fec-cli/src/commands/landing.rs
expression: terminal.backend()
snapshot_kind: text
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                             ▄▄    ▄▄ ▄▄▄▄  ▄▄▄▄▄ ▄▄▄▄▄  ▄▄▄▄                                                           "
"                             ██    ██ ██▄██ ██▄▄  ██▄▄  ██▀▀▀                                                           "
"                             ██▄▄▄ ██ ██▄█▀ ██    ██▄▄▄ ▀████                        v[VERSION]                            "
"                                                                                                                        "
"                             A CLI for exploring federal campaign finance data from the FEC                             "
"                                                                                                                        "
"                             > 1 Search  Search candidates and committees                                               "
"                               2 Dates  View upcoming FEC calendar dates                                                "
"                               3 RSS Feed  Watch recent FEC filings                                                     "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"                                ↑/↓/j/k navigate    Enter select    1/2/3 jump    q quit                                "
